...
    <string name="error_could_not_create_repository">Could not create repository</string>
    <!-- The terms that users must agree with in order to use the app -->
    <string name="terms_title">Terms of Use</string>
    <string name="terms">By using this app you agree with the statement of faith and translation guidelines and to release your work under the terms of the Creative Commons Attribution-ShareAlike 4.0 International License.</string>
    <!-- stub needed for the drawer open and close listener -->
...
    <string name="backup_and_publish">Backup and Publish</string>
    <string name="upload_wizard_intro">You are about to upload your translation.</string>
    <string name="label_continue">Continue</string>
    <string name="next">Next</string>
    <string name="upload_wizard_overview">Upload Review</string>
...
    <string name="label_translation_notes">Notes</string>
    <string name="label_passage_note">Passage note:</string>
    <string name="label_delete">Delete</string>
    <!-- Explanation of what a source language is -->
    <string name="source_language_instructions">Completed translations</string>
...
    <string name="view_license_agreement">License Agreement</string>
    <string name="license_deny">No Thanks</string>
    <string name="license_accept">I Agree</string>
    <!-- Footnotes are not used in the current version of the app. However future versions will use it -->
    <string name="label_display_as_footnote" translatable="false">Display as footnote</string>
...
    <string name="crash_details">What were you doing just before the app crashed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-- This is the translation guidelines that users must agree to before using the app. It is formatted as HTML. Translation on this will wait until we can find a reliable source -->
    <string name="translation_guidlines">
...
    <string name="no_key_terms">There are no Words</string>
    <string name="title_activity_developer">Developer Tools</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <!-- displays the application build or version code -->
...
    <string name="toggle_blind_draft_mode">Toggle blind draft</string>
    <string name="indexing">Indexing</string>
    <string name="title_upload">Upload</string>
    <string name="preview_chapter_translation_draft">Preview draft</string>
    <string name="choose_project_to_upload">Choose project to upload</string>
    <string name="verify">Verify</string>
    <string name="review">Review</string>
    <string name="publish_translation">Publish translation</string>
    <string name="notice">Notice</string>
    <string name="complete_required_fields">Please complete all required fields</string>
...
    <string name="preparing_for_first_use">Preparing app for first use. This may take a few minutes.</string>
    <string name="loading_languages">Preparing languages</string>
    <string name="title_activity_target_translations">Your Translation Projects</string>
    <string name="title_activity_new_target_translation">New Translation</string>
    <string name="translations_welcome"><![CDATA[Welcome!\nThis is your Home Screen. When you have translation projects on this device they will appear here.\n\nYou can start a new translation any time by tapping the green button in the top right.]]></string>
...
    <string name="progress">Progress</string>
    <string name="choose_first_source_translation">Choose source translation(s) to begin reading and translating</string>
    <string name="choose_source_translations">Choose source translations</string>
    <string name="confirm">Confirm</string>
    <string name="selected">Selected</string>
    <string name="available">Available</string>
    <string name="action_translations">Home</string>
    <string name="publish">Publish</string>
    <string name="backup">Upload</string>
    <string name="attached_files">Attached files</string>
...
    <string name="maximum_limit">(Maximum: <xliff:g example="3" id="maximum">%d</xliff:g>)</string>
    <string name="input_required">Input cannot be empty</string>
    <string name="dismiss">Dismiss</string>
    <string name="done">Done</string>
    <string name="translate_first">Please provide a translation first</string>
...
    <string name="result">Result</string>
    <string name="mark_chunks_done_result">Marked <xliff:g example="1" id="marked">%1$d</xliff:g> chunks out of <xliff:g example="1" id="total">%2$d</xliff:g></string>
    <string name="your_name">Your Name or Pseudonym</string>
    <string name="your_email">Your Email Address</string>
    <string name="your_phone">Your Phone Number</string>
...
    <string name="footnote_message_empty">Footnote cannot be empty</string>
    <string name="who_translated_notice">Who contributed to this translation?</string>
    <string name="privacy_notice">Privacy Notice</string>
    <string name="need_translator_notice">Please add a contributor</string>
    <string name="duplicate_native_speaker">A contributor with that name has already been added</string>
...
    <string name="login_doo43">Login with Server Account</string>
    <string name="register_door43">Create new Server Account</string>
    <string name="create_offline_profile">Create offline Account</string>
    <string name="still_possible_to_register_door43">You can still create or login to a server account later</string>
    <string name="title_connect_door43">Connect To Server</string>
...
    <string name="export_to_pdf">Export to PDF File</string>
    <string name="tip_export_to_pdf">Creates a .pdf file of your project</string>
    <string name="title_upload_export">Upload/Export Options</string>
    <string name="menu_upload_export">Upload/Export</string>
    <string name="title_review">Project Review</string>
...
    <string name="failed_search_repositories">Failed to find repositories. Check the logs for more details</string>
    <string name="cloning_repository">Cloning repository</string>
    <string name="start_new_translation">Start a new translation</string>
    <string name="regenerate_ssh_keys">Regenerate SSH keys</string>
    <string name="regenerate_ssh_keys_hint">Discards and regenerates the ssh keys used for git</string>
...
    <string name="library_was_deleted">The library content was deleted</string>
    <string name="source_draft_translation_not_found">Source text for this draft translation not found.</string>
    <string name="migrate_from_old_app">Migrate from Old App</string>
    <string name="migrate_from_old_app_description">Would you like to migrate from the old app data? You can do that later in Settings.</string>
    <string name="migrating_translations">Migrating translations. This may take a while. Please wait...</string>
...
    <string name="theme_title_dark">Dark</string>
    <string name="theme_title_system">System</string>
    <string name="header_general">General</string>
    <string name="title_remember_position">Remember my place</string>
    <string name="description_remember_position">Display the last viewed page when starting the app</string>
...
