...
                        fontWeight = FontWeight.Bold
                    )

                    IconButton(onClick = onAddSourceClick) {
                        Icon(
                            imageVector = Icons.Default.LibraryAdd,
                            contentDescription = "Edit Source",
                            tint = MaterialTheme.colorScheme.onSurfaceVariant
                        )
                    }
                }
            }
        }
...
