...
                    modifier = Modifier.size(36.dp)
                )

                IconButton(onClick = onInfoClick) {
                    Icon(
                        imageVector = Icons.Default.Info,
                        contentDescription = "Info"
                    )
                }
            }
        }
    }
}
...
