appId: org.bibletranslationtools.writer
---
- extendedWaitUntil:
    visible: "Start a new translation"
    timeout: 5000
- tapOn:
    text: "Start a new translation"
    waitToSettleTimeoutMs: 200
- tapOn: "aaa"
- tapOn: "bible-nt"
- scrollUntilVisible:
    element: "John"
    direction: DOWN
    timeout: 5000
    centerElement: true
- tapOn: "John"
- extendedWaitUntil:
    visible: "Your Translation Projects"
    timeout: 5000
- assertVisible: "John"
- tapOn: "John"
- extendedWaitUntil:
    visible: "Edit Source"
    timeout: 5000
- tapOn: "Edit Source"
- waitForAnimationToEnd
- assertVisible: "Choose source translations"
- tapOn: "Choose source translations"
- inputText: "English"
- hideKeyboard:
    optional: true
- waitForAnimationToEnd
- assertVisible: "Confirm"
- tapOn: 
    text: "English (en) - Unlocked Literal Bible"
    waitToSettleTimeoutMs: 500
- tapOn: 
    text: "Confirm"
    waitToSettleTimeoutMs: 500