appId: org.bibletranslationtools.writer
---
- assertVisible: "Your Translation Projects"
- tapOn: "Info"
- assertVisible: "John - Ghotuo"
- tapOn: "Upload"
- assertVisible: "Upload/Export Options"
- tapOn: 
    text: "Dismiss"
    waitToSettleTimeoutMs: 200
- assertVisible: "Your Translation Projects"
- tapOn: "Info"
- assertVisible: "John - Ghotuo"
- tapOn: "Publish"
- assertVisible: "Publish translation"
- tapOn: "back"
- assertVisible: "Your Translation Projects"
- tapOn: "Info"
- assertVisible: "John - Ghotuo"
- tapOn: 
    text: "Delete"
    waitToSettleTimeoutMs: 200
- tapOn: "Confirm"
- assertVisible: "Start a new translation"